--- a/libs/uix/kv/login.kv
+++ b/libs/uix/kv/login.kv
@@ -3,6 +3,8 @@
 
 <Login>:
     name: 'login'
+    email_: email
+    password_: password
 
     ScrollView:
         do_scroll_x: False
@@ -36,7 +38,7 @@
                 text: 'Email:'
 
             MDTextField:
-                id: 'email'
+                id: email
                 hint_text: "Введите ваш email."
                 helper_text: "Проверьте правильность введенного email."
                 required: True
@@ -50,12 +52,13 @@
                 text: 'Пароль:'
 
             MDTextField:
-                id: 'password'
+                id: password
                 hint_text: "Введите ваш пароль."
-                helper_text: "Пароля должен быть не менее 6 символов."
+                helper_text: "Пароль должен быть не менее 6 символов."
                 required: True
                 helper_text_mode: "on_error"
                 font_size: dp(23)
+                password: True
 
             MDRaisedButton:
                 text: "Войти"
@@ -63,4 +66,4 @@
                 opposite_colors: True
                 pos_hint: {'center_x': 0.5, 'center_y': 0.5}
 
-                on_release:
+                on_release: app.show_last() if root.login(app.initialize_storage()) is True else 'pass'
