--- a/libs/uix/kv/ico.kv
+++ b/libs/uix/kv/ico.kv
@@ -7,6 +7,7 @@
     name: 'ico'
     icobazaar_: icobazaar
     noname_: noname
+    noname2_: noname2
 
     MDTabbedPanel:
         id: tab_panel
@@ -63,7 +64,8 @@
                             pos_hint: {'center_x': 0, 'center_y': 0.5}
                             active: True
 
-                            on_touch_up: print(icobazaar.active)
+                            name: 'icobazaar_'
+                            on_touch_up: root.callback(icobazaar, icobazaar.active)
 
                     GridLayout:
                         cols: 2
@@ -80,3 +82,25 @@
                             size: dp(36), dp(48)
                             pos_hint: {'center_x': 0, 'center_y': 0.5}
                             active: False
+
+                            name: 'switch2'
+                            on_touch_up: root.callback(noname, noname.active)
+
+                    GridLayout:
+                        cols: 2
+
+                        MDLabel:
+                            font_style: 'Body2'
+                            theme_text_color: 'Primary'
+                            text: "No name"
+                            pos_hint: {'center_x': 0, 'center_y': 0.5}
+
+                        MDSwitch:
+                            id: noname2
+                            size_hint: None, None
+                            size: dp(36), dp(48)
+                            pos_hint: {'center_x': 0, 'center_y': 0.5}
+                            active: False
+
+                            name: 'switch3'
+                            on_touch_up: root.callback(noname2, noname2.active)
