--- a/libs/uix/kv/startscreen.kv
+++ b/libs/uix/kv/startscreen.kv
@@ -19,7 +19,7 @@
 #:import Last libs.uix.baseclasses.last.Last
 #:import BTT libs.uix.baseclasses.btt.BTT
 #:import Lucky libs.uix.baseclasses.lucky.Lucky
-#:import ByYears libs.uix.baseclasses.byyears.ByYears
+#:import Events libs.uix.baseclasses.events.Events
 #:import Settings_ libs.uix.baseclasses.settings_.Settings_
 
 
@@ -73,11 +73,11 @@
                 BTT:
                     name: 'btt'
 
+                Events:
+                    name: 'events'
+
                 Lucky:
                     name: 'lucky'
-
-                ByYears:
-                    name: 'by_years'
 
                 Settings_:
                     name: 'settings'
