--- a/libs/uix/kv/ico.kv
+++ b/libs/uix/kv/ico.kv
@@ -2,12 +2,36 @@
 #:import MDTab libs.applibs.kivymd.tabs.MDTab
 #:import MDSwitch libs.applibs.kivymd.selectioncontrols.MDSwitch
 
+#:import hex kivy.utils.get_color_from_hex
+
+
+<CatGridLayout@GridLayout>
+    cols: 2
+    padding: dp(5)
+
+    canvas:
+        Color:
+            rgba: hex('#03A9F4')
+        Line:
+            width: .5
+            ellipse: (self.x, self.y, self.width, self.height)
+
+<CatLabel@MDLabel>:
+    font_style: 'Body2'
+    theme_text_color: 'Primary'
+    pos_hint: {'center_x': 0, 'center_y': 0.5}
+
+<CatSwitch@MDSwitch>:
+    size_hint: None, None
+    size: dp(36), dp(48)
+    pos_hint: {'center_x': 0, 'center_y': 0.5}
+
+
 
 <Ico>:
     name: 'ico'
     icobazaar_: icobazaar
     noname_: noname
-    noname2_: noname2
 
     MDTabbedPanel:
         id: tab_panel
@@ -26,7 +50,6 @@
                 text: "Вывод с парсера"
                 halign: 'center'
 
-
         MDTab:
             name: 'catalogs'
             text: "Каталог"
@@ -38,7 +61,7 @@
                     orientation: 'vertical'
                     size_hint_y: None
                     padding: dp(40)
-                    spacing: dp(50)
+                    spacing: dp(65)
                     height: self.minimum_height
                     size_hint_x: .95
 
@@ -50,57 +73,29 @@
 
                     GridLayout:
                         cols: 2
+                        padding: dp(5)
 
-                        MDLabel:
-                            font_style: 'Body2'
-                            theme_text_color: 'Primary'
+                        CatLabel:
                             text: "ICO bazaar"
-                            pos_hint: {'center_x': 0, 'center_y': 0.5}
 
-                        MDSwitch:
+                        CatSwitch:
                             id: icobazaar
-                            size_hint: None, None
-                            size: dp(36), dp(48)
-                            pos_hint: {'center_x': 0, 'center_y': 0.5}
+                            name: 'icobazaar_'
                             active: True
 
-                            name: 'icobazaar_'
                             on_touch_up: root.callback(icobazaar, icobazaar.active)
 
-                    GridLayout:
-                        cols: 2
+                    CatGridLayout:
 
-                        MDLabel:
+                        CatLabel:
                             font_style: 'Body2'
                             theme_text_color: 'Primary'
                             text: "No name"
                             pos_hint: {'center_x': 0, 'center_y': 0.5}
 
-                        MDSwitch:
+                        CatSwitch:
                             id: noname
-                            size_hint: None, None
-                            size: dp(36), dp(48)
-                            pos_hint: {'center_x': 0, 'center_y': 0.5}
-                            active: False
-
                             name: 'switch2'
-                            on_touch_up: root.callback(noname, noname.active)
-
-                    GridLayout:
-                        cols: 2
-
-                        MDLabel:
-                            font_style: 'Body2'
-                            theme_text_color: 'Primary'
-                            text: "No name"
-                            pos_hint: {'center_x': 0, 'center_y': 0.5}
-
-                        MDSwitch:
-                            id: noname2
-                            size_hint: None, None
-                            size: dp(36), dp(48)
-                            pos_hint: {'center_x': 0, 'center_y': 0.5}
                             active: False
 
-                            name: 'switch3'
-                            on_touch_up: root.callback(noname2, noname2.active)
+                            on_touch_up: root.callback(noname, noname.active)
