--- a/libs/uix/kv/ico.kv
+++ b/libs/uix/kv/ico.kv
@@ -11,7 +11,7 @@
 
     canvas:
         Color:
-            rgba: hex('#03A9F4')
+            rgba: hex('#454545')
         Line:
             width: .5
             ellipse: (self.x, self.y, self.width, self.height)
@@ -32,6 +32,7 @@
     name: 'ico'
     icobazaar_: icobazaar
     noname_: noname
+    grid_box: grid_box
 
     MDTabbedPanel:
         id: tab_panel
@@ -44,11 +45,22 @@
             name: 'ico_list'
             text: "ICO"
 
-            MDLabel:
-                font_style: 'Body1'
-                theme_text_color: 'Primary'
-                text: "Вывод с парсера"
-                halign: 'center'
+            ScrollView:
+                do_scroll_y: True
+
+                BoxLayout:
+                    orientation: 'vertical'
+                    size_hint_y: None
+                    height: self.minimum_height
+                    padding: (0, dp(20), 0, dp(20))
+
+                    GridLayout:
+                        id: grid_box
+
+                        cols: 1
+                        spacing: dp(40)
+                        pos_hint: {'center_x':.5}
+                        size_hint: (.95, None)
 
         MDTab:
             name: 'catalogs'
