Add switching to specific screen when card on touched. Add return to the previous page from card full description page.

--- a/libs/uix/kv/startscreen.kv
+++ b/libs/uix/kv/startscreen.kv
@@ -21,6 +21,7 @@
 #:import Lucky libs.uix.baseclasses.lucky.Lucky
 #:import Events libs.uix.baseclasses.events.Events
 #:import Settings_ libs.uix.baseclasses.settings_.Settings_
+#:import Icobazaar libs.uix.baseclasses.icobazaar.Icobazaar
 
 
 <StartScreen>:
@@ -84,3 +85,6 @@
 
                 Search:
                     name: 'search'
+
+                Icobazaar:
+                    name: 'icobazaar'
