--- a/libs/uix/kv/startscreen.kv
+++ b/libs/uix/kv/startscreen.kv
@@ -21,7 +21,7 @@
 #:import Lucky libs.uix.baseclasses.lucky.Lucky
 #:import Events libs.uix.baseclasses.events.Events
 #:import Settings_ libs.uix.baseclasses.settings_.Settings_
-#:import Icobazaar libs.uix.baseclasses.icobazaar.Icobazaar
+#:import Icobazaar libs.uix.baseclasses.ico_dir.icobazaar.Icobazaar
 
 
 <StartScreen>:
