Rewrite ico class. Now display parser's data , which selected in 'parser's catalog'.

--- a/libs/uix/kv/startscreen.kv
+++ b/libs/uix/kv/startscreen.kv
@@ -21,7 +21,7 @@
 #:import Lucky libs.uix.baseclasses.lucky.Lucky
 #:import Events libs.uix.baseclasses.events.Events
 #:import Settings_ libs.uix.baseclasses.settings_.Settings_
-#:import IcobazaarItem libs.uix.baseclasses.ico_dir.icobazaar.IcobazaarItem
+#:import IcobazaarItem libs.uix.baseclasses.ico_dir.icobazaaritem.IcobazaarItem
 
 
 <StartScreen>:
