--- a/libs/uix/kv/ico.kv
+++ b/libs/uix/kv/ico.kv
@@ -33,10 +33,7 @@
     name: 'ico'
     icobazaar_: icobazaar
     noname_: noname
-    grid_box: grid_box
-    cats_box: cats_box
-    upcoming: upcoming
-    categories: categories
+    scrl_view: scrl_view
 
     MDTabbedPanel:
         id: tab_panel
@@ -51,76 +48,7 @@
 
             ScrollView:
                 do_scroll_y: True
-
-                BoxLayout:
-                    orientation: 'vertical'
-                    size_hint_y: None
-                    height: self.minimum_height
-
-                    GridLayout:
-                        id: cats_box
-                        size_hint_y: None
-                        cols: 3
-                        rows: 2
-
-                        NavigationDrawerIconButton:
-                            text: "Upcoming"
-                            badge_text: '12'
-
-                            id: upcoming
-                            name: 'upcoming'
-                            on_release: root.on_event(upcoming)
-
-                        NavigationDrawerIconButton:
-                            text: "Ongoing"
-                            badge_text: '12'
-
-                            id: ongoing
-                            name: 'ongoing'
-                            on_release: root.on_event(ongoing)
-
-                        NavigationDrawerIconButton:
-                            text: "Ended"
-                            badge_text: '12'
-
-                            id: ended
-                            name: 'ended'
-                            on_release: root.on_event(ended)
-
-                        NavigationDrawerIconButton:
-                            text: "New"
-                            badge_text: '12'
-
-                            id: new
-                            name: 'new'
-                            on_release: root.on_event(new)
-
-                        NavigationDrawerIconButton:
-                            text: "All"
-                            badge_text: '12'
-
-                            id: all
-                            name: 'all'
-                            on_release: root.on_event(all)
-
-                        NavigationDrawerIconButton:
-                            id: categories
-                            name: 'categories'
-
-                            text: "Open Categories"
-                            icon: 'menu-down'
-
-                            on_release:
-                                root.open_categories_popup();
-                                root.on_event(categories)
-
-                    GridLayout:
-                        id: grid_box
-
-                        cols: 1
-                        spacing: dp(20)
-                        pos_hint: {'center_x':.5}
-                        size_hint: (.95, None)
+                id: scrl_view
 
         MDTab:
             name: 'catalogs'
