Fixed bug: When select parser in section catalog (ico menu item) and go back to ico section data don't update depending of selected parser.

--- a/libs/uix/kv/ico.kv
+++ b/libs/uix/kv/ico.kv
@@ -46,6 +46,8 @@
             name: 'ico_list'
             text: "ICO"
 
+            on_tab_release: root.load_data()
+
             ScrollView:
                 do_scroll_y: True
                 id: scrl_view
